--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
 
   <properties>
     <java-version>10</java-version>
-
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+    <!-- Maven Plugin Version -->
 
     <maven-compiler-plugin-version>3.7.0</maven-compiler-plugin-version>
     <maven-resources-plugin-version>3.1.0</maven-resources-plugin-version>
@@ -19,21 +20,24 @@
     <cucumber-jvm-parallel-plugin.version>5.0.0</cucumber-jvm-parallel-plugin.version>
     <build-helper-maven-plugin-version>3.0.0</build-helper-maven-plugin-version>
 
+    <!-- Dependencies Version -->
+
     <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
     <lombok-version>1.16.22</lombok-version>
-    <kafka-version>1.0.1</kafka-version>
+    <testcontainers.version>1.10.5</testcontainers.version>
+    
+    <!-- Test Dependencies Version -->
+    
     <kafka-streams-version>1.0.1</kafka-streams-version>
     <avro-version>1.8.2</avro-version>
     <confluent-version>4.1.1</confluent-version>
-    <commons-io-version>2.6</commons-io-version>
-    <jackson-version>2.9.5</jackson-version>
-    <jodatime-version>2.9.9</jodatime-version>
     <awaitility.version>3.1.1</awaitility.version>
     <cucumber.version>2.4.0</cucumber.version>
-    <testcontainers.version>1.10.5</testcontainers.version>
+    
   </properties>
 
   <!-- Defines if the tests will run parallel or serial -->
+  
   <profiles>
   
     <!-- Run X (i.e. 2, 3, or 4) number of tests in separate java jvm(s) -->
@@ -89,39 +93,38 @@
       </dependency>
 
       <dependency>
-        <groupId>io.confluent</groupId>
-        <artifactId>kafka-streams-avro-serde</artifactId>
-        <version>${confluent-version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.avro</groupId>
-        <artifactId>avro</artifactId>
-        <version>${avro-version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.kafka</groupId>
-        <artifactId>kafka-streams</artifactId>
-        <version>${kafka-streams-version}</version>
-      </dependency>
-
-      <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
         <version>${lombok-version}</version>
       </dependency>
-
-      <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>${commons-io-version}</version>
-      </dependency>
-
+      
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>kafka</artifactId>
         <version>${testcontainers.version}</version>
+      </dependency>
+      
+      <!-- Test Dependencies -->
+      
+      <dependency>
+        <groupId>org.apache.avro</groupId>
+        <artifactId>avro</artifactId>
+        <version>${avro-version}</version>
+        <scope>test</scope>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.apache.kafka</groupId>
+        <artifactId>kafka-streams</artifactId>
+        <version>${kafka-streams-version}</version>
+        <scope>test</scope>
+      </dependency>
+      
+      <dependency>
+        <groupId>io.confluent</groupId>
+        <artifactId>kafka-streams-avro-serde</artifactId>
+        <version>${confluent-version}</version>
+        <scope>test</scope>
       </dependency>
 
       <dependency>
@@ -163,11 +166,6 @@
     <dependency>
       <groupId>org.awaitility</groupId>
       <artifactId>awaitility</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
     </dependency>
 
     <dependency>
