--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.etiology.testing</groupId>
-  <artifactId>kafka-testing-utilities</artifactId>
+  <artifactId>embedded-kafka-cluster</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
