--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,4 +2,4 @@ logging:
   level:
     root: info
     # trace level on the following package enables logging of the docker containers
-    com.etiology.testing.kafka.junit.rule: debug
+    io.github.vspiliop.testing.kafka.junit.rule: debug
