--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
     <avro-maven-plugin.version>1.8.2</avro-maven-plugin.version>
+    <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
 
     <!-- Dependencies Version -->
 
@@ -103,6 +104,33 @@
       </properties>
     </profile>
 
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+        
+          <!-- Required for maven central deployment -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-source-plugin</artifactId>
+          </plugin>
+          
+          <!-- Required for maven central deployment -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+          </plugin>
+
+          <!-- Required for maven central deployment -->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+          </plugin>
+          
+        </plugins>
+      </build>
+    </profile>
+
   </profiles>
 
   <dependencyManagement>
@@ -136,7 +164,7 @@
       </dependency>
 
       <!-- Test Dependencies -->
-      
+
       <dependency>
         <groupId>org.apache.avro</groupId>
         <artifactId>avro</artifactId>
@@ -284,6 +312,18 @@
     <pluginManagement>
 
       <plugins>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>${maven-release-plugin.version}</version>
+          <configuration>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
+            <useReleaseProfile>false</useReleaseProfile>
+            <releaseProfiles>release</releaseProfiles>
+            <goals>deploy</goals>
+          </configuration>
+        </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -464,29 +504,15 @@
 
     <plugins>
 
-      <!-- Required for maven central deployment -->
+      <!-- Handy for releasing to maven central -->
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-source-plugin</artifactId>
+        <artifactId>maven-release-plugin</artifactId>
       </plugin>
 
       <!-- Required for maven central deployment -->
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-      </plugin>
-
-      <!-- Required for maven central deployment -->
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-gpg-plugin</artifactId>
-      </plugin>
-
-      <!-- Required for maven central deployment -->
-      
       <plugin>
         <groupId>org.sonatype.plugins</groupId>
         <artifactId>nexus-staging-maven-plugin</artifactId>
