--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git://github.com/vspiliop/embedded-kafka-cluster.git</connection>
-    <developerConnection>scm:git:ssh://github.com:vspiliop/embedded-kafka-cluster.git</developerConnection>
+    <connection>scm:git:https://github.com/vspiliop/embedded-kafka-cluster.git</connection>
+    <developerConnection>scm:git:https://github.com:vspiliop/embedded-kafka-cluster.git</developerConnection>
     <url>https://github.com/vspiliop/embedded-kafka-cluster/tree/master</url>
   </scm>
 
