[maven-release-plugin] prepare release embedded-kafka-cluster-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.vspiliop.testing</groupId>
   <artifactId>embedded-kafka-cluster</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <name>embedded-kafka-cluster</name>
@@ -32,6 +30,7 @@
     <connection>scm:git:git://github.com/vspiliop/embedded-kafka-cluster.git</connection>
     <developerConnection>scm:git:git@github.com:vspiliop/embedded-kafka-cluster.git</developerConnection>
     <url>http://github.com/vspiliop/embedded-kafka-cluster/tree/master</url>
+    <tag>embedded-kafka-cluster-0.0.1</tag>
   </scm>
 
   <properties>
