--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.github.vspiliop.testing</groupId>
   <artifactId>embedded-kafka-cluster</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>embedded-kafka-cluster</name>
@@ -30,7 +30,7 @@
     <connection>scm:git:git://github.com/vspiliop/embedded-kafka-cluster.git</connection>
     <developerConnection>scm:git:git@github.com:vspiliop/embedded-kafka-cluster.git</developerConnection>
     <url>http://github.com/vspiliop/embedded-kafka-cluster/tree/master</url>
-    <tag>embedded-kafka-cluster-0.0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
