--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   </scm>
 
   <properties>
-    <java.version>10</java.version>
+    <java.version>8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
     <!-- Tests to exclude -->
@@ -58,7 +58,7 @@
     <!-- Dependencies Version -->
 
     <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
-    <lombok.version>1.16.22</lombok.version>
+    <lombok.version>1.18.8</lombok.version>
     <testcontainers.version>1.10.5</testcontainers.version>
 
     <!-- Test Dependencies Version -->
@@ -418,7 +418,9 @@
                 <goal>generateRunners</goal>
               </goals>
               <configuration>
-                <glue>io.github.vspiliop.testing.kafka.steps</glue>
+                <glue>
+                	<package>io.github.vspiliop.testing.kafka.steps</package>
+                </glue>
                 <featuresDirectory>src/test/java/io/github/vspiliop/testing/kafka/feature</featuresDirectory>
                 <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
                 <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
@@ -501,6 +503,50 @@
           </executions>
         </plugin>
 
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        <plugin>
+        	<groupId>org.eclipse.m2e</groupId>
+        	<artifactId>lifecycle-mapping</artifactId>
+        	<version>1.0.0</version>
+        	<configuration>
+        		<lifecycleMappingMetadata>
+        			<pluginExecutions>
+        				<pluginExecution>
+        					<pluginExecutionFilter>
+        						<groupId>org.apache.avro</groupId>
+        						<artifactId>
+        							avro-maven-plugin
+        						</artifactId>
+        						<versionRange>[1.8.2,)</versionRange>
+        						<goals>
+        							<goal>schema</goal>
+        							<goal>idl-protocol</goal>
+        							<goal>protocol</goal>
+        						</goals>
+        					</pluginExecutionFilter>
+        					<action>
+        						<ignore></ignore>
+        					</action>
+        				</pluginExecution>
+        				<pluginExecution>
+        					<pluginExecutionFilter>
+        						<groupId>com.github.temyers</groupId>
+        						<artifactId>
+        							cucumber-jvm-parallel-plugin
+        						</artifactId>
+        						<versionRange>[5.0.0,)</versionRange>
+        						<goals>
+        							<goal>generateRunners</goal>
+        						</goals>
+        					</pluginExecutionFilter>
+        					<action>
+        						<ignore></ignore>
+        					</action>
+        				</pluginExecution>
+        			</pluginExecutions>
+        		</lifecycleMappingMetadata>
+        	</configuration>
+        </plugin>
       </plugins>
 
     </pluginManagement>
