--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     <cucumber-jvm-parallel-plugin.version>5.0.0</cucumber-jvm-parallel-plugin.version>
     <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
     <maven-source-plugin.version>2.2.1</maven-source-plugin.version>
-    <maven-javadoc-plugin.version>3.1.0</maven-javadoc-plugin.version>
+    <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
     <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
     <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
     <avro-maven-plugin.version>1.8.2</avro-maven-plugin.version>
@@ -347,6 +347,7 @@
           <version>${maven-javadoc-plugin.version}</version>
           <configuration>
             <excludePackageNames>io.github.vspiliop.schema.test</excludePackageNames>
+            <source>${java.version}</source>
           </configuration>
           <executions>
             <execution>
