--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.vspiliop.testing</groupId>
-  <artifactId>embedded-kafka-cluster</artifactId>
+  <artifactId>docker-kafka-cluster</artifactId>
   <version>0.0.4-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>embedded-kafka-cluster</name>
+  <name>docker-kafka-cluster</name>
   <description>Start a fully configurable docker based Kafka cluster as part of your tests</description>
   <url>https://github.com/vspiliop/embedded-kafka-cluster</url>
 
@@ -58,7 +58,7 @@
 
     <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
     <lombok.version>1.18.8</lombok.version>
-    <testcontainers.version>1.10.5</testcontainers.version>
+    <testcontainers.version>1.12.3</testcontainers.version>
 
     <!-- Test Dependencies Version -->
 
