--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
     <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
     <lombok.version>1.18.8</lombok.version>
-    <testcontainers.version>1.12.3</testcontainers.version>
+    <testcontainers.version>1.15.0</testcontainers.version>
 
     <!-- Test Dependencies Version -->
 
@@ -165,6 +165,12 @@
         <version>${testcontainers.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.testcontainers</groupId>
+        <artifactId>toxiproxy</artifactId>
+        <version>${testcontainers.version}</version>
+      </dependency>
+
       <!-- Test Dependencies -->
 
       <dependency>
@@ -242,6 +248,11 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>kafka</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>toxiproxy</artifactId>
     </dependency>
 
     <dependency>
